# git-ctf-website

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
git_ctf_website/: manage.py
git_ctf_website/core/: forms.py  models.py  views.py
git_ctf_website/core/migrations/: 0001_initial.py  0002_alter_winner_duration.py
git_ctf_website/core/templates/: home.html
git_ctf_website/git_ctf_website/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
